--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -5,6 +5,7 @@
 .flexdiv{
     display: flex;
     align-items: center;
+    margin: 10px 0;
 }
 
 .ui.primary.button.signup{
@@ -17,4 +18,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+}
+
+.private{
+    margin-right: 20px;
 }
